finished Project v2, fixed the wraping issue with the .top-content, .text-container

--- a/style/index.css
+++ b/style/index.css
@@ -105,7 +105,7 @@ p {
 
 .top-content {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
     margin-bottom: 2rem;
     border-bottom: .1rem dashed black;
